// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssessmentInstanceSelectedButton render when element is not selected and is not visible 1`] = `
<DocumentFragment>
  <mock-customizediconbutton
    aria-label="Visualization"
    checked="false"
    classname="instanceVisibilityButton testInstanceSelectedHiddenButton"
    disabled="true"
    iconprops="[object Object]"
    role="checkbox"
  />
</DocumentFragment>
`;

exports[`AssessmentInstanceSelectedButton render when element is not selected and is visible 1`] = `
<DocumentFragment>
  <mock-customizediconbutton
    aria-label="Visualization"
    checked="false"
    classname="instanceVisibilityButton"
    disabled="false"
    iconprops="[object Object]"
    role="checkbox"
  />
</DocumentFragment>
`;

exports[`AssessmentInstanceSelectedButton render when element is selected and visible 1`] = `
<DocumentFragment>
  <mock-customizediconbutton
    aria-label="Visualization"
    checked="true"
    classname="instanceVisibilityButton"
    disabled="false"
    iconprops="[object Object]"
    role="checkbox"
  />
</DocumentFragment>
`;

exports[`AssessmentInstanceSelectedButton render when element is selected but hidden 1`] = `
<DocumentFragment>
  <mock-customizediconbutton
    aria-label="Visualization"
    checked="true"
    classname="instanceVisibilityButton testInstanceSelectedHiddenButton"
    disabled="true"
    iconprops="[object Object]"
    role="checkbox"
  />
</DocumentFragment>
`;
